# ITM_25.2_G3

./: Circuit.py  ElementFactory.py  README.md  Simulation_config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
code/: Element.py
code/elements/: Resistor.py
docs/: Element.rst  conf.py  index.rst
docs/_build/doctrees/: Circuit.doctree  Element.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: .buildinfo  Circuit.html  Element.html  genindex.html  index.html  modules.html  objects.inv  search.html  searchindex.js
netlists/examples/: chua.net  lc.net  mosfet_curve.net  sinusoidal.net
netlists/examples/ground_truth/: mosfet_curve.sim  test.py
results/: chua.txt  dc_source.txt  lc.txt  mosfet_curve.txt  opamp_rectifier.txt  programatic_dc.txt  programatic_lc.txt  pulse.txt  sinusoidal.txt
src/: ElementFactory.py  dc_source.net  main.ipynb  main.py  main_old.py  output.txt
src/circuit_simulator/: Circuit.py  CircuitSimulator.py  Element.py  ElementFactory.py  Simulation.py  SimulationConfig.py  __init__.py
src/circuit_simulator/elements/: AmpOp.py  Capacitor.py  CurrentControlledCurrentSource.py  CurrentControlledVoltageSource.py  CurrentDCSource.py  CurrentPulseSource.py  CurrentSINSource.py  CurrentSource.py  Diode.py  FTCT.py  FonteTensaoControlDC.py  Inductor.py  Indutor.py  Mosfet.py  Resistor.py  ResistorNL.py  ResistorNonLinear.py  Resistor_NL.py  VoltageControlledCurrentSource.py  VoltageControlledVoltageSource.py  VoltageDCSource.py  VoltagePulseSource.py  VoltageSINSource.py  VoltageSource.py  VoltageSourceDC.py  __init__.py
(+3 files in other folders)
