[tool.poetry]
name = "seu_projeto"
version = "0.1.0"
description = "Descrição do seu projeto Python."
authors = ["Seu Nome <email@exemplo.com>"]
license = "MIT"
readme = "README.md"

# Dependências principais de execução (se houver)
dependencies = {
    python = "^3.11"
}

# GRUPO DE DEPENDÊNCIAS PARA A DOCUMENTAÇÃO
# O Poetry será usado para gerenciar e instalar este grupo
[tool.poetry.group.docs.dependencies]
sphinx = "^7.2"
sphinx-rtd-theme = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
