[tool.poetry]
name = "circuit_simulator"
version = "0.1.0"
description = "Projeto da disciplina ITM"
authors = ["hugoaraujo@poli.ufrj.br", "andre.pereira@poli.ufrj.br"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

# GRUPO DE DEPENDÊNCIAS PARA A DOCUMENTAÇÃO (opcional)
[tool.poetry.group.docs.dependencies]
sphinx = "^7.2"
sphinx-rtd-theme = "^2.0"
numpy = "^1.26.0"
click = "^8.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]